--- a/source.ipynb
+++ b/source.ipynb
@@ -64,7 +64,7 @@
         "## Affichage de toutes les lignes pour les outputs\n",
         "pd.options.display.max_rows = 4000"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
       "source": [
         "id_train.head(10)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
       "source": [
         "tr_train.head(10)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1648,7 +1648,7 @@
         "print(\"Proportion de transactions avec id information (train): \"+\"{:.2%}\".format(np.sum(tr_train['TransactionID'].isin(id_train['TransactionID'].unique()))/tr_train['TransactionID'].nunique()))\n",
         "print(\"Proportion de transactions avec id information (test): \"+\"{:.2%}\".format(np.sum(tr_test['TransactionID'].isin(id_test['TransactionID'].unique()))/tr_test['TransactionID'].nunique()))"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1691,7 +1691,7 @@
         "train=pd.merge(tr_train,id_train,on=\"TransactionID\",how=\"right\")\n",
         "test=pd.merge(tr_test,id_test,on=\"TransactionID\",how=\"right\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1715,7 +1715,7 @@
       "source": [
         "train.dtypes"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2188,7 +2188,7 @@
         "total_data=np.product(train.shape)\n",
         "print(\"Proportion de données manquantes dans la base : \"+\"{:.2%}\".format(missing_data/total_data))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2213,7 +2213,7 @@
         "  plt.ylabel('Proportion de données manquantes')\n",
         "  plt.bar(np.arange(len(null_counts)),null_counts)\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2230,7 +2230,7 @@
         "#Visualisation\n",
         "missing_view(train)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2280,7 +2280,7 @@
         "tab = pd.DataFrame(train.groupby('isFraud').count()['TransactionID'])\n",
         "tab"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2391,7 +2391,7 @@
         "\n",
         "ax.set_title(\"Distribution de la variable isFraud\")"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2442,7 +2442,7 @@
         "Kept_index=sorted([*class0_downsample,*class1])\n",
         "train_calibrate=train[train.index.isin(Kept_index)]"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2468,7 +2468,7 @@
         "    tick_label=['Non Frauduleux', 'Frauduleux']\n",
         ")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2507,7 +2507,7 @@
       "source": [
         "missing_view(train_calibrate)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2566,7 +2566,7 @@
         "missing_view(train_calibrate[train_calibrate.isFraud == 1])\n",
         "plt.suptitle(\"Valeurs manquantes sur les données frauduleuses\", fontsize=50)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2609,7 +2609,7 @@
         "missing_view(train_calibrate[train_calibrate.isFraud == 0])\n",
         "plt.suptitle(\"Valeurs manquantes sur les données non frauduleuses\", fontsize=50)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2669,7 +2669,7 @@
         "train_column_miss = train_calibrate.isnull().any()\n",
         "print(f'Nombre de variables avec des données manquantes (apprentissage) : {train_column_miss.sum()} .')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2697,7 +2697,7 @@
         "sensibility_graph[0] = np.cumsum(sensibility_graph[0]/sensibility_graph[0].sum())\n",
         "plt.plot(sensibility_graph['index'], sensibility_graph[0], '-o')"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2750,7 +2750,7 @@
         "train_data_miss_60 = train_calibrate.filter(items=null_counts[null_counts>=0.6].reset_index()['index'])\n",
         "msno.heatmap(train_data_miss_60)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2811,7 +2811,7 @@
         "train_work = train_calibrate.filter(items=null_counts[null_counts<0.2].reset_index()['index'])\n",
         "train_work.shape"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2836,7 +2836,7 @@
         "from sklearn.impute import KNNImputer\n",
         "train_imputed = KNNImputer(missing_values=np.nan, n_neighbors=5).fit_transform(train_work.select_dtypes(exclude='object'))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2851,7 +2851,7 @@
       "source": [
         "train_imputed"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2895,7 +2895,7 @@
         "train_imputed = pd.merge(train_imputed,train_work[np.append('TransactionID',train_work.select_dtypes('object').columns.values)],on=\"TransactionID\",how=\"left\")\n",
         "train_imputed\n"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3980,7 +3980,7 @@
         "sns.catplot(y='ProductCD',kind='count',data=train_imputed)\n",
         "  "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4034,7 +4034,7 @@
         "print(train_imputed['card4'].value_counts(dropna=False))\n",
         "sns.catplot(y='card4',kind='count',data=train_imputed)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4089,7 +4089,7 @@
         "print(train_imputed['card6'].value_counts(dropna=False))\n",
         "sns.catplot(y='card6',kind='count',data=train_imputed)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4143,7 +4143,7 @@
         "print(train_imputed['P_emaildomain'].value_counts(dropna=False))\n",
         "sns.catplot(y='P_emaildomain',kind='count',data=train_imputed)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4253,7 +4253,7 @@
         "print(train_imputed['R_emaildomain'].value_counts(dropna=False))\n",
         "sns.catplot(y='R_emaildomain',kind='count',data=train_imputed)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4362,7 +4362,7 @@
         "print(train_imputed['id_12'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_12',kind='count',data=train_imputed)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4414,7 +4414,7 @@
         "print(train_imputed['id_15'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_15',kind='count',data=train_imputed)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4468,7 +4468,7 @@
         "print(train_imputed['id_16'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_16',kind='count',data=train_imputed)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4521,7 +4521,7 @@
         "print(train_imputed['id_28'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_28',kind='count',data=train_imputed)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4574,7 +4574,7 @@
         "print(train_imputed['id_29'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_29',kind='count',data=train_imputed)"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4627,7 +4627,7 @@
         "print(train_imputed['id_31'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_31',kind='count',data=train_imputed)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4788,7 +4788,7 @@
         "print(train_imputed['id_35'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_35',kind='count',data=train_imputed)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4841,7 +4841,7 @@
         "print(train_imputed['id_36'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_36',kind='count',data=train_imputed)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4894,7 +4894,7 @@
         "print(train_imputed['id_37'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_37',kind='count',data=train_imputed)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4947,7 +4947,7 @@
         "print(train_imputed['id_38'].value_counts(dropna=False))\n",
         "sns.catplot(y='id_38',kind='count',data=train_imputed)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5000,7 +5000,7 @@
         "print(train_imputed['DeviceType'].value_counts(dropna=False))\n",
         "sns.catplot(y='DeviceType',kind='count',data=train_imputed)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5060,7 +5060,7 @@
         "import warnings\n",
         "warnings.filterwarnings('ignore')"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5075,7 +5075,7 @@
         "scaler=preprocessing.StandardScaler()\n",
         "X_train_st=scaler.fit_transform(X_train)\n"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5092,7 +5092,7 @@
         "cv_scores = cross_val_score(logit, X_train_st, Y_train, cv=5, scoring='roc_auc')\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5141,7 +5141,7 @@
         "fig, ax = plt.subplots(figsize=fig_dims) \n",
         "ax = sns.barplot(x=imp, y=list(X_train.columns),ax=ax)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5417,7 +5417,7 @@
         "rfecv.fit(X_train_st,Y_train)\n",
         "rfecv.transform(X_train_st)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5457,7 +5457,7 @@
       "source": [
         "rfecv.n_features_#Number of best features"
       ],
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5485,7 +5485,7 @@
       "source": [
         "rfecv.ranking_"
       ],
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5526,7 +5526,7 @@
       "source": [
         "rfecv.support_#which features to keep "
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5571,10 +5571,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "4a8xj7yo4iA1",
-        "outputId": "974fa0dd-83ce-4230-aa91-6b1e73a91933",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "974fa0dd-83ce-4230-aa91-6b1e73a91933"
       },
       "source": [
         "pp=[]\r\n",
@@ -5588,7 +5588,7 @@
         "cv_scores = cross_val_score(logit, X_train_st1, Y_train, cv=5, scoring='roc_auc')\r\n",
         "cv_scores.mean()#verification que le score augmente"
       ],
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5608,11 +5608,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "OlnAD1514ipM",
-        "outputId": "64b3d8c4-463e-4a14-d72c-4c419ba02833",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 605
-        }
+        },
+        "outputId": "64b3d8c4-463e-4a14-d72c-4c419ba02833"
       },
       "source": [
         "plt.figure(figsize=(16, 9))\r\n",
@@ -5623,7 +5623,7 @@
         "\r\n",
         "plt.show()"
       ],
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5687,7 +5687,7 @@
         "  best_35_features[k]=list(X_train.columns)[best_35_features[k]]\r\n",
         "best_35_features\r\n"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5768,7 +5768,7 @@
         "cv_scores = cross_val_score(logit, X_train_st_q, Y_train, cv=5, scoring='roc_auc')\n",
         "cv_scores.mean()#verification que le score reste le meme"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5808,7 +5808,7 @@
         "X_train_st_only_numerical=scaler.fit_transform(X_train)\n",
         "X_train_full_st=pd.merge(pd.DataFrame(X_train_st_only_numerical),pd.get_dummies(train_imputed[sites]),right_index=True,left_index=True)"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5825,7 +5825,7 @@
         "cv_scores = cross_val_score(logit, X_train_full_st, Y_train, cv=5, scoring='roc_auc')\n",
         "cv_scores.mean()"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5874,7 +5874,7 @@
         "fig, ax = plt.subplots(figsize=fig_dims) \n",
         "ax = sns.barplot(x=imp, y=list(X_train_full.columns),ax=ax)"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6409,7 +6409,7 @@
         "rfecv.fit(X_train_full_st,Y_train)\n",
         "rfecv.transform(X_train_full_st)"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6449,7 +6449,7 @@
       "source": [
         "rfecv.n_features_"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6477,7 +6477,7 @@
       "source": [
         "rfecv.ranking_"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6533,7 +6533,7 @@
       "source": [
         "rfecv.support_#which features to keep "
       ],
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6622,7 +6622,7 @@
         "cv_scores = cross_val_score(logit, X_train_full_st_1, Y_train, cv=5, scoring='roc_auc')\n",
         "cv_scores.mean()#verification que le score augmente"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6657,7 +6657,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6675,12 +6675,33 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9i6v6LI6PVDy"
+      },
+      "source": [
+        "**SVM**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "nlMCiNk5HjKx"
       },
       "source": [
-        ""
+        "from sklearn.svm import SVC \r\n",
+        " from sklearn.model_selection import GridSearchCV \r\n",
+        "  \r\n",
+        "# defining parameter range \r\n",
+        "param_grid = {'C': [0.1, 1, 10, 100, 1000],  \r\n",
+        "              'gamma': [1, 0.1, 0.01, 0.001, 0.0001], \r\n",
+        "              'kernel': ['rbf']}  \r\n",
+        "  \r\n",
+        "grid = GridSearchCV(SVC(), param_grid, refit = True, verbose = 3) \r\n",
+        "  \r\n",
+        "# fitting the model for grid search \r\n",
+        "grid.fit(X_train_full_st, y_train) \r\n",
+        "print(grid.best_params_) \r\n"
       ],
       "execution_count": null,
       "outputs": []
